--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -28,14 +28,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+
+  
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
         if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@4959ce089c160fddf62f7b42464195ba1a56d382 # v3.6.0
+        uses: sigstore/cosign-installer@v3.6.0
         with:
-          cosign-release: 'v2.1.1'
-
+          cosign-release: 'v2.4.0' # optional
+        
       # Set up BuildKit Docker container builder to be able to build
       # multi-platform images and export cache
       # https://github.com/docker/setup-buildx-action
