--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homepage-external",
+  "name": "homeab-api",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,9 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.16",
+    "@mui/icons-material": "^6.0.0",
     "@mui/lab": "^5.0.0-alpha.151",
-    "@mui/material": "^5.14.16",
+    "@mui/material": "^6.0.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
@@ -27,8 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "eslint": "^9",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5"
