--- a/ui/package.json
+++ b/ui/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^6.0.0",
     "@mui/lab": "^5.0.0-alpha.151",
     "@mui/material": "^6.0.0",
+    "axios": "^1.7.6",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "swr": "^2.2.4"
   },
   "devDependencies": {
