fix: add EnvVar for Unraid-API mode

--- a/config/local.yaml
+++ b/config/local.yaml
@@ -4,3 +4,5 @@ homelab:
     internalMetricsUrl: "http://syncthing.10.0.0.21.nip.io/metrics"
     mockRestart: "yes"
     restartUrl: "http://localhost:8080/api/syncthinghelper/restart"
+  unraid:
+    mdstat: cmd/unraid-api/testdata.txt
